# snake-dqn

./: .gitignore  CLAUDE.md  CLEANUP_PLAN.md  README.md  RESEARCH_ROADMAP.md  activate_env.sh  play.sh  play_human.sh  pyproject.toml  pytest.ini  quick_train.sh  requirements-dev.txt  requirements.txt
.github/: README_BADGES.md
.github/workflows/: ci.yml
archive/: ARCHITECTURE.md
colab/: h100_apex_v1.py
configs/: default.yaml  drqn_dense.yaml  drqn_stage6.yaml  drqn_warmstart.yaml  exp_arena08.yaml  exp_arena10.yaml  exp_big1024.yaml  exp_boost4.yaml  exp_deathscale.yaml  exp_kill4.yaml  exp_snakes12.yaml  exp_snakes12_lowlr.yaml  goal_default_train.yaml  goal_slither_20260615.yaml  goal_slither_stage2.yaml  goal_slither_stage3.yaml  goal_slither_stage4.yaml  goal_slither_stage5.yaml  play_champion.yaml  production.yaml  training_fast.yaml
docs/: autonomous_run_20260615.md  slither_training_log_20260615.md
src/: __init__.py  main.py
src/core/: __init__.py  config_loader.py  device_manager.py  game_config.py  reward_contract.py
src/data/: __init__.py  memory_db_handler.py
src/game/: __init__.py  ai_snake.py  food_manager.py  game_logic.py  game_state.py  human_snake.py  snake.py  snake_factory.py
src/model/: __init__.py  apex_network.py  base_network.py  checkpoint_manager.py  gru_network.py  model_factory.py
src/scripts/: apex_train.py  audit_replay.py  ensemble_eval.py  evaluate_checkpoints.py  generate_experiences.py  offline_train.py  rebase_checkpoint.py  tournament_eval.py
src/training/: __init__.py  action_mask.py  apex_actor.py  apex_buffer.py  apex_learner.py  apex_policy.py  apex_priorities.py  base_buffer.py  base_dqn_policy.py  checkpoint_contract.py  curriculum.py  metrics_tracker.py  multistep_buffer.py  online_trainer.py  replay_buffer.py  sequence_buffer.py  (+2 more)
tests/: README.md  __init__.py  conftest.py  test_action_mask.py  test_ai_snake.py  test_apex_actor.py  test_apex_buffer.py  test_apex_learner.py  test_apex_learner_compile.py  test_apex_policy.py  test_apex_priorities.py  test_apex_train_config.py  test_audit_replay.py  test_base_buffer.py  test_checkpoint_contract.py  test_circular_arena.py  test_config_reconciliation.py  test_curriculum.py  test_device_selection.py  test_drqn_integration.py  test_enemy_features.py  test_evaluate_checkpoints.py  test_food_manager.py  test_game_config.py  test_game_logic.py  test_game_state.py  test_generate_experiences.py  test_gru_network.py  test_human_snake.py  test_kill_attribution.py  test_main_training_state.py  test_memory_db_handler.py  test_multistep_buffer.py  test_offline_train.py  test_online_trainer.py  test_per_action_danger.py  test_relative_actions.py  test_replay_quality_pure.py  test_sequence_buffer.py  test_snake.py  (+2 more)
(+8 files in other folders)
